Basic App fixes